--- a/Multimeter/Multimeter.ioc
+++ b/Multimeter/Multimeter.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -17,22 +17,28 @@ Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB7
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_ControllerModeGated
+Mcu.Pin14=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB6
-Mcu.PinsNb=11
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -49,9 +55,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Signal=ADCx_IN0
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=ADCx_IN1
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -133,9 +141,24 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_ETR,ClockSourceETR_Mode2
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM1.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM1.Period=4999
+TIM1.Prescaler=8399
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM2.IPParameters=TIM_MasterOutputTrigger
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeGated.Mode=Gated Mode
+VP_TIM2_VS_ControllerModeGated.Signal=TIM2_VS_ControllerModeGated
 board=custom
 isbadioc=false
