--- a/Multimeter/Multimeter.ioc
+++ b/Multimeter/Multimeter.ioc
@@ -9,6 +9,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
@@ -25,28 +26,44 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM2_VS_ControllerModeGated
-Mcu.Pin14=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM2_VS_ControllerModeGated
+Mcu.Pin24=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin3=PH1 - OSC_OUT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
-NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.ADC_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -55,8 +72,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Signal=ADCx_IN1
@@ -72,10 +89,50 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=AC_VOLTAGE_MODE
+PC0.Locked=true
+PC0.Signal=GPXTI0
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=DC_VOLTAGE_MODE_RANGE_1
+PC1.Locked=true
+PC1.Signal=GPXTI1
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=DC_VOLTAGE_MODE_RANGE_2
+PC2.Locked=true
+PC2.Signal=GPXTI2
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=DC_VOLTAGE_MODE_RANGE_3
+PC3.Locked=true
+PC3.Signal=GPXTI3
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=RESISTANCE_MODE_RANGE_1
+PC4.Locked=true
+PC4.Signal=GPXTI4
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=RESISTANCE_MODE_RANGE_2
+PC5.Locked=true
+PC5.Signal=GPXTI5
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=RESISTANCE_MODE_RANGE_3
+PC6.Locked=true
+PC6.Signal=GPXTI6
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=CAPACITY_MODE_RANGE_1
+PC7.Locked=true
+PC7.Signal=GPXTI7
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=CAPACITY_MODE_RANGE_2
+PC8.Locked=true
+PC8.Signal=GPXTI8
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=CAPACITY_MODE_RANGE_3
+PC9.Locked=true
+PC9.Signal=GPXTI9
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -111,7 +168,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -143,6 +200,26 @@ RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_ETR,ClockSourceETR_Mode2
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM1.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
