Changed pins naming

--- a/Multimeter/Multimeter.ioc
+++ b/Multimeter/Multimeter.ioc
@@ -75,7 +75,11 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=FREQUENCY_INPUT
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=VOLTAGE_INPUT
 PA1.Signal=ADCx_IN1
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -85,8 +89,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=DISPLAY_I2C_SCL
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=DISPLAY_I2C_SDA
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
