--- a/Multimeter/Multimeter.ioc
+++ b/Multimeter/Multimeter.ioc
@@ -100,48 +100,68 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=DISPLAY_I2C_SDA
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC0.GPIO_Label=AC_VOLTAGE_MODE
+PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPXTI0
-PC1.GPIOParameters=GPIO_Label
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC1.GPIO_Label=DC_VOLTAGE_MODE_RANGE_1
+PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Locked=true
 PC1.Signal=GPXTI1
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC2.GPIO_Label=DC_VOLTAGE_MODE_RANGE_2
+PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC2.GPIO_PuPd=GPIO_PULLUP
 PC2.Locked=true
 PC2.Signal=GPXTI2
-PC3.GPIOParameters=GPIO_Label
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC3.GPIO_Label=DC_VOLTAGE_MODE_RANGE_3
+PC3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC3.GPIO_PuPd=GPIO_PULLUP
 PC3.Locked=true
 PC3.Signal=GPXTI3
-PC4.GPIOParameters=GPIO_Label
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC4.GPIO_Label=RESISTANCE_MODE_RANGE_1
+PC4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC4.GPIO_PuPd=GPIO_PULLUP
 PC4.Locked=true
 PC4.Signal=GPXTI4
-PC5.GPIOParameters=GPIO_Label
+PC5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIO_Label=RESISTANCE_MODE_RANGE_2
+PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPXTI5
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC6.GPIO_Label=RESISTANCE_MODE_RANGE_3
+PC6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.Locked=true
 PC6.Signal=GPXTI6
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC7.GPIO_Label=CAPACITY_MODE_RANGE_1
+PC7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=GPXTI7
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC8.GPIO_Label=CAPACITY_MODE_RANGE_2
+PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
 PC8.Signal=GPXTI8
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC9.GPIO_Label=CAPACITY_MODE_RANGE_3
+PC9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Locked=true
 PC9.Signal=GPXTI9
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
